# music-os

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
crates/music-os-core/: Cargo.toml
crates/music-os-core/src/: archive.rs  export_naming.rs  lib.rs  loudness.rs
docs/: architecture.md
src/: App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
